--- a/wiki/ReductLibrary.wiki
+++ b/wiki/ReductLibrary.wiki
@@ -1,4 +1,3 @@
-#summary The =Reduct= Library: Reducing Programs to Normal Form summary
 = The _Reduct_ Library: Reducing Programs to Normal Form =
 == Concepts ==
 The general goal of reducing programs to normal form is to eliminate
@@ -70,7 +69,7 @@ The implementation is in C++. It need not be obsessively coded for speed, but
 obvious slowdowns (e.g., needlessly converting objects to and from strings)
 should be avoided. Many parts have already been implemented, including the
 complete Boolean normal form as described above. The basic representation is
-based on [http://www.aei.mpg.de/~peekas/tree/tree.h tree.hh], a simple STL-like
+based on [http://www.aei.mpg.de/~peekas/tree/tree.h tree.h], a simple STL-like
 class for representing %$n$%-ary trees. The basic interface should be something
 like the following set of functions:
 {{{
