--- a/wiki/BooleanNormalForm.wiki
+++ b/wiki/BooleanNormalForm.wiki
@@ -33,5 +33,5 @@ disjunction-of-conjunctions.
 
   * No node's guard set is a subset of any of its siblings' guard sets.
 
- * For any pair of siblings' guard sets having the form http://moses.googlecode.com/files/enf1.png and http://moses.googlecode.com/files/enf2.png
-, where S,,1,, and S,,2,, are sets of literals, no _third_  sibling's guard set is a subset of http://moses.googlecode.com/files/enf3.png .
+ * For any pair of siblings' guard sets having the form http://moses.googlecode.com/files/bnf1.png and http://moses.googlecode.com/files/bnf2.png
+, where S,,1,, and S,,2,, are sets of literals, no _third_  sibling's guard set is a subset of http://moses.googlecode.com/files/bnf3.png .
