Edited wiki page through web user interface.

--- a/wiki/GeneralNormalForm.wiki
+++ b/wiki/GeneralNormalForm.wiki
@@ -12,3 +12,6 @@ follows:
   http://moses.googlecode.com/files/general_rules_01.png
 
   * Any commutative function should (after reduction) have its arguments sorted lexicographically (e.g., smallest to largest, dictionary order). For example, http://moses.googlecode.com/files/general_rules_02.png . The precise comparison function used is not important here, merely that a consistent ordering be applied.
+
+
+-- Moshe Looks - 17 Apr 2007
