--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,8 @@ Moshe Looks (lead developer) <moshe@metacog.org>
 
 Nil Geisweiller
 
+Chen Shuo
+
 Kasper Peeters - not directly involved, author of tree.hh
 (http://www.aei.mpg.de/~peekas/tree/), the basis for tree.h, used with
 permission (for within this project only)
